--- a/locale/core.yml
+++ b/locale/core.yml
@@ -92,7 +92,7 @@ core:
   sort_oldest: Cũ
   sort_relevance: Phù hợp
   sort_top: Lên trên
-  start_a_discussion: Cùng bắt đầu
+  start_a_discussion: Mới
   unread_posts: "{count} unread"
   upload: Tải lên
   username: Tên đăng nhập
