--- a/locale/core.yml
+++ b/locale/core.yml
@@ -59,7 +59,7 @@ core:
   no_notifications: Không có thông báo nào
   notifications: Thông báo
   notify_discussion_renamed: Bài viết bạn theo dõi được thay đổi
-  now: Bây giờ
+  now: Hiện tại
   online: Online
   original_post: Original Post
   password: Mật khẩu
