Update <rename> to <Sửa tiêu đề>

--- a/locale/core.yml
+++ b/locale/core.yml
@@ -77,7 +77,7 @@ core:
   recover_password: Khôi phục mật khẩu
   refresh: Tải lại trang
   remove: Xóa
-  rename: Đổi
+  rename: Sửa tiêu đề
   reply: Phản hồi
   reply_posted: Phản hồi của bạn đã được đăng.
   restore: Khôi phục
